--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ graphene-django==2.15.0
 graphql-core==2.3.2
 graphql-relay==2.0.1
 promise==2.3
+psycopg2==2.9.3
 pytz==2021.3
 Rx==1.6.1
 singledispatch==3.7.0
